--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.lab_des_06.smobil.MainActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="jhkgk"
+        tools:layout_editor_absoluteX="151dp"
+        tools:layout_editor_absoluteY="164dp" />
 </android.support.constraint.ConstraintLayout>
